# crossroads

./: .env.template  .gitignore  .gitmodules  Cargo.toml  README.md  dagger.json  justfile
.cicd/dagger/: go.mod  main.go
.github/workflows/: build.yml
configuration/: schema.k
configuration/examples/: simple.k
crates/api/: Cargo.toml
crates/api/src/: configuration.rs  database.rs  endpoints.rs  error.rs  errors.rs  lib.rs  main.rs  road.rs
crates/api/src/configuration/: database.rs  proxy.rs  validation.rs
crates/api/src/database/: error.rs  errors.rs
crates/api/src/endpoints/: loader.rs
crates/api/src/road/: event.rs
crates/api/tests/: database_tests.rs
crates/default-proxy/: proxy.wasm
crates/gateway/: Cargo.toml
crates/gateway/src/: configuration.rs  lib.rs  proxy.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: bindings.rs  lib.rs
crates/proxy/wit/: README.md  service.wit  types.wit
crates/runtime/: Cargo.toml
crates/runtime/src/: bindings.rs  context.rs  lib.rs  message.rs  proxy.rs  resolution.rs  runtime.rs
crates/runtime/src/proxy/: metadata.rs
crates/runtime/src/runtime/: bindings.rs  context.rs
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md
src/: api.rs  cli.rs  configuration.kcl  configuration.rs  gateway.rs  main.rs
src/api/: errors.rs
src/configuration/: api.rs  gateway.rs
tests/: api_tests.hurl  run_test.sh
wit/: service.wit  types.wit
