[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
garde.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tokio.workspace = true
libsql.workspace = true

runtime = { path = "../runtime" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time", "test-util"] }
uuid = { version = "1.18.1", features = ["v4"] }
